# unit-test-project-template-for-vs-code

./: CMakeLists.txt  readme.md
libs/: CMakeLists.txt  cpplib.cpp  cpplib.h
src/: main.cpp
tests/: CMakeLists.txt  tests.cpp
